--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
-<%= link_to 'Back to Home', root_path %>
+<div class="container">
+  <h1>About me</h1>
+  <p>I am Mohammed Falih and i am 21.</p>
+  <%= link_to 'Back to Home', root_path %>
+</div>
