--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :boy, style: "display: block" %>
-    <%= form.text_area :boy %>
+    <%= form.label :body, style: "display: block" %>
+    <%= form.text_area :body %>
   </div>
 
   <div>
