--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="comment-<%= comment.id%> container"  style="border: 1px solid black; padding: 1em; margin: 1em;">
-  <%= comment.user.name %>
+  <%= comment.user.full_name %>
   <% if (comment.updated_at - comment.created_at) > 1 %>
     <span>Edited <%= time_ago_in_words(comment.updated_at) %> ago.</span>
   <% else %>
