--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,23 @@
-<div class="container">
+<div class="container card">
   <h1>My Personal Blog</h1>
   <p>I am Mohammed Falih. To know more about me: click About me </p>
-  <%= link_to 'About me', about_path, class: 'btn btn-secondary' %>
-  <%= link_to 'Blog', posts_path, class: 'btn btn-primary' %>
+  <div class="card-actions mb-3">
+    <%= link_to 'About me', about_path, class: 'btn btn-secondary' %>
+    <%= link_to 'Blog', posts_path, class: 'btn btn-primary' %>
+  </div>
 </div>
+
+
+<% if current_user %>
+  <div class="container card mt-4">
+  <h2>User Info</h2>
+  <h3><%= current_user.full_name %></h3>
+  <ul>
+  <li><%= current_user.address.street.titleize %></li>
+  <li><%= current_user.address.city.titleize %></li>
+  <li><%= current_user.address.state.titleize %></li>
+  <li><%= current_user.address.zip %></li>
+  <li><%= current_user.address.country.titleize %></li>
+  </ul>
+  </div>
+<% end %>
