--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
   <h1>
     <%= post.title %>
   </h1>
-  <h4>Posted by: <%= link_to post.user.name, user_path(post.user) %></h4>
+  <h4>Posted by: <%= link_to post.user.full_name, user_path(post.user) %></h4>
   <h6>
     <%= pluralize(post.views, "view") %>
   </h6>
