--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,2 +1,4 @@
-<h1><%= @user.name %></h1>
-<h6><%= pluralize(@user.views, 'view') %></h6>
+<div class="container">
+  <h1><%= @user.full_name %></h1>
+  <h6><%= pluralize(@user.views, 'view') %></h6>
+</div>
