--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,5 +10,7 @@
       </p>
     <% end %>
   </div>
-  <%= link_to "New post", new_post_path %>
+  <div class="container card m-5">
+    <%= link_to "New post", new_post_path , class: "fs-2 m-3"%>
+  </div>
 </div>
