--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,6 +3,7 @@
   <thead>
     <tr>
       <th><%= sort_link(@q, :title, "Title", default_order: :asc) %></th>
+      <th><%= sort_link(@q, :title, "Category", default_order: :asc) %></th>
       <th><%= sort_link(@q, :body, "Blog Content") %></th>
       <th><%= sort_link(@q, :user_name, "Users") %></th>
     </tr>
@@ -11,6 +12,7 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= link_to post.title, post %></td>
+        <td><%= link_to post.category.name, post.category %></td>
         <td><%= post.body.to_plain_text.truncate_words(25) %></td>
         <td><%= link_to post.user.full_name, post.user %></td>
       </tr>
