--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,20 +4,22 @@
   <div class="card-actions mb-3">
     <%= link_to 'About me', about_path, class: 'btn btn-secondary' %>
     <%= link_to 'Blog', posts_path, class: 'btn btn-primary' %>
+    <%= link_to 'My Products', checkout_path, class: 'btn btn-success' %>
   </div>
 </div>
-
-
 <% if current_user %>
   <div class="container card mt-4">
-  <h2>User Info</h2>
-  <h3><%= current_user.full_name %></h3>
-  <ul>
-  <li><%= current_user.address.street.titleize %></li>
-  <li><%= current_user.address.city.titleize %></li>
-  <li><%= current_user.address.state.titleize %></li>
-  <li><%= current_user.address.zip %></li>
-  <li><%= current_user.address.country.titleize %></li>
-  </ul>
+    <h2>User Info</h2>
+    <h3><%= current_user.full_name %></h3>
+    <ul>
+      <li><%= current_user.address.street.titleize %></li>
+      <li><%= current_user.address.city.titleize %></li>
+      <li><%= current_user.address.state.titleize %></li>
+      <li><%= current_user.address.zip %></li>
+      <li><%= current_user.address.country.titleize %></li>
+    </ul>
+    <div class="border border-3">
+      <li class="px-4"><%= link_to 'Manage Biling', @portal_session.url %></li>
+    </div>
   </div>
 <% end %>
