--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,13 @@
   <div class="card-actions mb-3">
     <%= link_to 'About me', about_path, class: 'btn btn-secondary' %>
     <%= link_to 'Blog', posts_path, class: 'btn btn-primary' %>
-    <%= link_to 'My Products', checkout_path, class: 'btn btn-success' %>
+    <%= link_to 'My Products', checkout_path(
+      line_items: ['price_1Phmj3Hg7lJ49QoWUh9uJtEO'],
+      payment_mode: "payment"), class: 'btn btn-success' %>
+    <%= link_to 'Subscribe', checkout_path(
+      line_items: ['price_1PhtAkHg7lJ49QoW7qZjrnwi'],
+      payment_mode: "subscription"
+    ), class: 'btn btn-primary' %>
   </div>
 </div>
 <% if current_user %>
@@ -19,7 +25,13 @@
       <li><%= current_user.address.country.titleize %></li>
     </ul>
     <div class="border border-3">
-      <li class="px-4"><%= link_to 'Manage Biling', @portal_session.url %></li>
+      <li class="px-4">
+        <% if @portal_session %>
+          <%= link_to 'Manage Billing', @portal_session.url %>
+        <% else %>
+          No Billing
+        <% end %>
+      </li>
     </div>
   </div>
 <% end %>
